Database Change and additional API
